add prisma  gitignore ,create prisma service and create lists controller

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,50 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 /generated/prisma
 
 /generated/prisma
+
+#Prisma
+node_modules
+
+yarn-error.log
+declaration
+dist
+build
+tmp
+pnpm-debug.log
+.DS_Store
+.turbo
+
+/target
+migration-engine*
+schema-engine*
+
+*tmp.db
+dist/
+
+*.tsbuildinfo
+.prisma
+.attest
+.pnpm-store
+
+.vscode/*
+!.vscode/launch.json.default
+!.vscode/extensions.json
+coverage
+
+.eslintcache
+
+.pnpm-debug.log
+
+esm
+
+dev.db
+junit.xml
+/output.txt
+
+.envrc.local
+
+.idea/
+
+package.copy.json
+
+*.tgz
